2007-08-27  David N. Welton  <davidw@dedasys.com>

	* tclconfig/tcl.m4: Moved to latest tcl.m4 at Valery's suggestion.

2007-08-22  David N. Welton  <davidw@dedasys.com>

	* configure.ac: Added patch from Valery Masiutsin
	<val.masutin@gmail.com> improving the configure setup.

2006-07-03  Karl Lehenbauer  <karl-rivet@sc.com>
        * rivet/packages/dio/dio_Postgresql.tcl: when handling a PostgreSQL
	  result, if numrows is zero, see if cmdTuples
	  (Pg_result $resultHandle -cmdTuples) contains anything, and if it 
	  does, put that in of numrows, hiding a PostgreSQL interface
	  quirk from DIO.

2006-06-07  David N. Welton  <davidw@dedasys.com>

	* rivet/packages/session/session-create-mysql.sql: Minor update
	from Massimo Manghi for Mysql 4.

	* rivet/packages/session/session-class.tcl: Minor update from
	Massimo Manghi.

2006-05-14  David N. Welton  <davidw@dedasys.com>

	* rivet/packages/session/, rivet/packages/dio/: Added Mysql and
	Oracle session creation packages.  Updates to dio and session
	packages.  Modifications to the Mysql driver.  Added an Oracle
	driver. Thanks to Arnulf Wiedemann (arnulf@wiedemann-pri.de) and
	Massimo Manghi (manghi@biol.unipr.it).

2006-02-03  Karl Lehenbauer  <karl-rivet@sc.com>
	* rivet/packages/dio/[dio,diodisplay].tcl: Uncovered a serious flaw
	  in DIO -- there is no way to update a row in a way that changes
	  the key value.  As a result, DIOdisplay punts and deletes the
	  row then reinserts it with the new key.  This is not the same
	  thing as the delete can trigger integrity checks that fail because
	  of constraints from other tables.  Added the somewhat kludgey
	  update_with_explicit_key method to let us specify the key rather
	  than having the key always be dug out of the data array (so that
	  the key in the data array can be different) and altered the
	  row edit code in DIOdisplay to use this rather than doing the
	  delete/insert thing.

2006-01-25  Karl Lehenbauer  <karl-rivet@sc.com>