@@ -13,7 +13,7 @@
    limitations under the License.
 */
 
-xxx
+
 
 /* Rivet config */
 #ifdef HAVE_CONFIG_H
