@@ -1,5 +1,11 @@
 2007-08-27  David N. Welton  <davidw@dedasys.com>
 
+	* src/apache-1/Makefile.am: Accepted patch from Valery for
+	improved compilation.
+
+	* src/apache-1/apache_multipart_buffer.c: Accepted patch from
+	Valery to make this file compile.
+
 	* tclconfig/tcl.m4: Moved to latest tcl.m4 at Valery's suggestion.
 
 2007-08-22  David N. Welton  <davidw@dedasys.com>
